--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
             display: block;
             margin: 0 auto;
         }
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
@@ -38,6 +42,7 @@
             <p>O Marco Zero fica às margens do Rio Capibaribe e possui uma grande praça, onde turistas e moradores locais se reúnem para apreciar a paisagem, tirar fotos e desfrutar da atmosfera animada.</p>
             <img src="foto.jpeg" alt="Marco Zero - Recife">
             <p>O Marco Zero também é conhecido por sediar eventos culturais e shows ao ar livre, tornando-se um ponto de encontro para diversas atividades culturais ao longo do ano.</p>
+            <p>Para conhecer mais pontos turísticos do Recife Antigo, visite <a href="segundatela.html">esta página</a>.</p>
         </article>
     </main>
     <footer>
